# miniapp-factory

./: README.md  flake.nix
example/: flake.nix
nix/: nixos-module.nix  package.nix
rust-app/: Cargo.toml
rust-app/src/: main.rs
rust-app/src/blockchain/: credits.rs  mod.rs  nft.rs
rust-app/src/database/: coding_servers.rs  credits.rs  deployments.rs  mod.rs  projects.rs  waitlist.rs  worker_servers.rs
rust-app/src/factory/: handlers.rs  mod.rs  models.rs
rust-app/src/showcase/: handlers.rs  mod.rs  models.rs
rust-app/src/utils/: auth.rs  env.rs  error.rs  keccak.rs  mod.rs  nft.rs  price.rs  runner.rs  time.rs  wallet.rs
rust-app/src/waitlist/: handlers.rs  mod.rs  models.rs
