[package]
name = "miniapp-factory"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
alloy = { version = "1", features = ["provider-ws"] }
env_logger = "0.11"
ethsign = "0.9"
futures-util = "0.3"
hex = "0.4"
log = "0.4"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tiny-keccak = "2"
tokio = { version = "1", features = ["full"] }
xnode-deployer = { version = "1.0", features = ["hyperstack"] }
xnode-manager-sdk = "1.0"
